<resources>
    <string name="app_name">Scanmage</string>
    <string name="title_card">Title</string>
    <string name="date">Date</string>
    <string name="logo">Logo</string>
    <string name="scanmage">SCANMAGE</string>
    <string name="phone_placeholder">Your Phone Number</string>
    <string name="send_otp_note">We will send you a One time SMS message. Carrier rates may apply</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verification_code">Verification code</string>
    <string name="check_verification_note">Please type the verification code sent to</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_name">Enter Name</string>
    <string name="verify">VERIFY</string>
    <string name="enter_email">Enter Email</string>
    <string name="captureimage">captureImage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_thumbnail">image_thumbnail</string>
    <string name="file_thumbnail">File Thumbnail</string>
    <string name="image_count">Image Count</string>
    <string name="image_preview">Image Preview</string>
    <string name="save_as_pdf_btn">Save as PDF</string>
    <string name="file_name_hint">myfile</string>
    <string name="pdf_text_view">PDF</string>
    <string name="pdf_extension">.pdf</string>
    <string name="selectedimage">selectedImage</string>
    <string name="crop_icon">Crop Icon</string>
    <string name="add_image">Add Image</string>
    <string name="open_camera">Open Camera</string>
    <string name="import_image">Import Image</string>
    <string name="logout">Logout</string>
</resources>