<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerificationActivity">

    <ProgressBar
        android:id="@+id/progress_circular_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:paddingTop="50dp">

        <LinearLayout
            android:id="@+id/first_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/verification_code"
                android:textColor="#FFFFFF"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/check_verification_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/check_verification_note"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <com.trailblazing.scanmage.OtpEditText
            android:id="@+id/et_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_ll"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="32dp"
            android:cursorVisible="true"
            android:digits="1234567890"
            android:hint="@string/enter_otp"
            android:inputType="number"
            android:maxLength="6"
            android:text=""
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/et_otp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="40dp"
            android:autofillHints=""
            android:background="@drawable/et_style"
            android:gravity="center"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#D3D3D3"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/name"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/et_style"
            android:gravity="center"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="10dp"
            android:textColor="#FFFFFF"
            android:textColorHint="#D3D3D3"
            android:textSize="25sp" />

        <Button
            android:id="@+id/verify"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/email"
            android:layout_gravity="center"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/button"
            android:text="@string/verify"
            android:textColor="#232323"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>