<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/first_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:background="@drawable/ic_logo"
                android:contentDescription="@string/logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/scanmage"
                android:letterSpacing="0.2"
                android:textColor="@color/colorPrimaryText"
                android:textSize="40sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints="Enter Phone Number"
                android:gravity="center"
                android:hint="@string/phone_placeholder"
                android:inputType="phone"
                android:textColor="@color/colorPrimaryText"
                android:textColorHint="@color/colorHintText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/send_otp_note"
                android:textColor="@color/colorPrimaryText" />

            <Button
                android:id="@+id/send_otp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/button"
                android:text="@string/send_otp"
                android:textColor="#232323"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:visibility="gone" />

</RelativeLayout>