<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="15dp"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/snapshot"
                    android:layout_width="110dp"
                    android:layout_height="110dp"
                    android:contentDescription="@string/image_thumbnail"
                    tools:srcCompat="@tools:sample/avatars" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/fileTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_toEndOf="@+id/thumbnail"
                android:text="@string/title_card"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fileTitle"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@+id/thumbnail"
                android:text="@string/date"
                android:textColor="#000000"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp"
                android:onClick="download_btn"
                app:srcCompat="@drawable/ic_download" />

            <ImageView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="70dp"
                android:layout_marginBottom="15dp"
                android:onClick="share_btn"
                app:srcCompat="@drawable/ic_share" />

            <ImageView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="15dp"
                android:onClick="delete_btn"
                app:srcCompat="@drawable/ic_delete" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>